--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 
 body {
 	text-align: center;
+	background: #000;
 }
 
 button {
@@ -33,12 +34,14 @@ button:active, button:hover {
 header {
 	position: relative;
 	top: 0;
+	color: #fff;
 	
 }
 
 main {
 	margin-top: 9.3%;
 	position: relative;
+	color: #fff;
 }
 
 footer {
@@ -46,4 +49,5 @@ footer {
 	bottom: 0;
 	margin-left: 12.5%;
 	margin-right: 12.5%;
+	color: #fff;
 }
